# trainset

./: .gitignore  README.md  app.py  data_handler.py  data_processing.py  eslint.config.cjs  eslint.config.js  index.html  netlify.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js  server.py  timeline_clone.html  visualization.py
.github/workflows/: ci.yml
frontend/: package.json
frontend/src/: api.ts  index.tsx
frontend/src/components/: Help.tsx  Labeler.tsx  LabelerModal.tsx  Navbar.tsx  TemplatePage.tsx
netlify/functions/: annotations.js  data.js  export.js  upload.js
src/assets/js/: LabelerD3.js
src/components/: BaseNavbar.vue
src/router/: index.js
src/utils/: parseCsv.js
src/views/: Analytics.vue  Explore.vue  Help.vue  Index.vue  Labeler.vue  License.vue  ProjectManagement.vue  TimelineClone.vue
static/files/: multi_timeline_data.csv  timeline_data.csv
templates/: index.html  upload.html
tests/: test_app.py  test_data_handler.py
