[tool.uv]
name = "trainset"
version = "0.1.0"
description = "A graphical tool for labeling time series data"
authors = ["Your Name <your.email@example.com>"]

[tool.uv.dependencies]
Flask = "2.0.1"
pandas = "1.3.3"
dask = "2021.9.1"
plotly = "5.3.1"
dash = "2.0.0"
matplotlib = "3.4.3"
seaborn = "0.11.2"
bokeh = "2.4.2"

[build-system]
requires = ["uv"]
build-backend = "uv.build"
